@@ -327,6 +327,9 @@ func init() {
 		{"javascript", ".js", "/*", "*/", "//", "", true, nil},
 		{"obj-c", ".m", "/*", "*/", "//", "", true, reallyObjectiveC},
 		{"c#", ".cs", "/*", "*/", "//", "", true, nil},
+		//{"html", ".html", "<!--", "-->", "", "", false, nil},
+		//{"html", ".htm", "<!--", "-->", "", "", false, nil},
+		//{"xml", ".xml", "<!--", "-->", "", "", false, nil},
 		{"php", ".php", "/*", "*/", "//", "", true, nil},
 		{"php3", ".php", "/*", "*/", "//", "", true, nil},
 		{"php4", ".php", "/*", "*/", "//", "", true, nil},
@@ -372,12 +375,17 @@ func init() {
 		{"rust", ".rs", "", "", "//", "", true, nil},
 		{"rust", ".rlib", "", "", "//", "", true, nil},
 		{"erlang", ".erl", "", "", "%", "", true, nil},
+		{"verilog", ".v", "/*", "*/", "//", "", true, nil},
+		{"verilog", ".vh", "/*", "*/", "//", "", true, nil},
 		//{"turing", ".t", "", "", "%", "", true, nil},
 		{"d", ".d", "", "", "//", "", true, nil},
 		{"occam", ".f", "", "", "//", "", true, realllyOccam},
 		{"prolog", ".pl", "", "", "%", "", true, reallyProlog},
 		{"mumps", ".m", "", "", ";", "", true, nil},
 		{"pop11", ".p", "", "", ";", "", true, reallyPOP11},
+		{"rebol", ".r", "", "", "comment", "", false, nil},
+		{"simula", ".sim", "", "", "comment", "", false, nil},
+		{"icon", ".icn", "", "", "#", "", false, nil},
 		// autoconf cruft
 		{"autotools", "config.h.in", "/*", "*/", "//", "", true, nil},
 		{"autotools", "autogen.sh", "", "", "#", "", true, nil},
@@ -434,7 +442,7 @@ func init() {
 		{"modula3", ".m3", false, nil},
 		{"modula3", ".ig", false, nil},
 		{"modula3", ".mg", false, nil},
-		{"ml", ".ml", false, nil},
+		{"ml", ".ml", false, nil},	// Could be CAML or OCAML
 		{"mli", ".ml", false, nil},
 		{"mll", ".ml", false, nil},
 		{"mly", ".ml", false, nil},
