@@ -1,0 +1,2 @@
+<!-- HTML is marked "not interesting", so this will be ignored -->
+<b>Hello, big bold world!</b>
