@@ -1,0 +1,7 @@
+//Hello, World in Verilog
+module top;
+
+initial
+    $display("Hello, world!");
+
+endmodule
