@@ -1,0 +1,7 @@
+comment "Hello, World!" in Simula
+Begin
+        while 1 = 1 do begin
+                outtext ("Hello World!");
+                outimage;
+        end;
+End;
